--- a/makePlots/makePlots.Rmd
+++ b/makePlots/makePlots.Rmd
@@ -13,18 +13,22 @@ knitr::opts_chunk$set(echo = TRUE)
 #Making figures using simulated data
 #Make sure to have local version of SNFTool installed
 #Load utility functions
-#file.path <- "~/Documents/uva/master/the/utils/simMVData.R" 
-util.fxns <- "~/Documents/gitRepos/master/utils/simMVData.R"
+util.fxns <- "~/Documents/uva/master/the/utils/simMVData.R" 
+#util.fxns <- "~/Documents/gitRepos/master/utils/simMVData.R"
 source(util.fxns)
-snf.fxns <- "~/Documents/gitRepos/master/utils/snf_fxns.R"
+
+
+snf.fxns <- "~/Documents/uva/master/the/utils/snf_fxns.R"
+#snf.fxns <- "~/Documents/gitRepos/master/utils/snf_fxns.R"
 source(snf.fxns)
+
+plotting.fxns <- "~/Documents/uva/master/the/utils/plotting_fxns.R"
+#plotting.fxns <- "~/Documents/gitRepos/master/utils/plotting_fxns.R"
+source(plotting.fxns)
+
 ###Clean up this particular set of functions, redundant
 #exp.plot.fxns <- "~/Documents/gitRepos/master/utils/simulatedExploratoryPlots.R"
 #source(exp.plot.fxns)
-plotting.fxns <- "~/Documents/gitRepos/master/utils/plotting_fxns.R"
-source(plotting.fxns)
-
-
 ```
 
 ```{r}
@@ -95,11 +99,11 @@ plotSimDataScatter(dat = perturb.sim$perturbation.2[,c("V1", "V2")],
 #Figure 2 Similarity Network Fusion Heat Comparison
 #Scenario A - inverted labels
 
-snf.a <- runSNFPipeline(Data1 = inverted.sim$classes,
-                        Data2 = inverted.sim$inverted.classes,
-                        truelabel = inverted.sim$true.label)
-a.nmi <- plotSNFHeatComparison(all.data = snf.a$affinity.matrices,
-                               truelabel = inverted.sim$true.label)
+#snf.a <- runSNFPipeline(Data1 = inverted.sim$classes,
+#                        Data2 = inverted.sim$inverted.classes,
+#                        truelabel = inverted.sim$true.label)
+#a.nmi <- plotSNFHeatComparison(all.data = snf.a$affinity.matrices,
+#                               truelabel = inverted.sim$true.label)
 
 #Scenario B - Noisy views
 snf.b <- runSNFPipeline(Data1 = noise.sim$gaussian.noise,
@@ -140,11 +144,53 @@ ggplot(nmi.data, aes(fill = Views, y = NMI.values, x = Simulated.Data)) +
 
 
 ```{r}
-#Figure 4 - K means multiple kernel learning as implemented by Mehmet Gonen
-source.path <- "~/Documents/gitRepos/master/lmkkmeans-master"
+#Chapter 4 - figure 3 multiple kernel k means
+#K means multiple kernel learning as implemented by Mehmet Gonen
+mkkm.fxns <- "~/Documents/uva/master/the/utils/mkkm_fxns_sim.R"
 
 
-e.nmi <- plotMKLKMHeatComparison(Data1 = noise.sim$gaussian.noise,
-                               Data2 = noise.sim$gamma.noise,
-                               truelabel = noise.sim$true.label)
+mkkm.a <- runMKKMPipeline(Data1 = noise.sim$gaussian.noise,
+                          Data2 = noise.sim$gamma.noise,
+                          truelabel = noise.sim$true.label)
+
+mmkm.a.nmi <- plotSNFHeatComparison(all.data = mkkm.a$kernel.matrices,
+                                    truelabel = noise.sim$true.label,
+                                    down.pct = 0.2)
+
+mkkm.b <- runMKKMPipeline(Data1 = perturb.sim$perturbation.1,
+                          Data2 = perturb.sim$perturbation.2,
+                          truelabel = perturb.sim$true.label,
+                          scale.factor = 1/32)
+
+mmkm.b.nmi <- plotSNFHeatComparison(all.data = mkkm.b$kernel.matrices,
+                                    truelabel = noise.sim$true.label,
+                                    down.pct = 0.2)
+
+
+```
+
+```{r}
+#NMI values for the multiple kernel k means experiment
+
+#Chapter 4 Figures -- normalized mutual information histograms -- should I add multiple kernel learning here?
+
+NMI.values <- c(unlist(mkkm.a$nmi.values), unlist(mkkm.b$nmi.values))
+
+Simulated.Data <- factor(c(rep("Noise Simulation", 3), rep("Boundary Misclassification", 3)),
+                         levels = c("Noise Simulation", "Boundary Misclassification"))
+
+Views <- factor(rep(c("View 1", "View 2", "Fused"), 2), levels = c("View 1", "View 2", "Fused"))
+#levels(conditions) <- c("View 1", "View 2", "Fused")
+
+nmi.data <- data.frame(Simulated.Data, Views, NMI.values)
+
+ggplot(nmi.data, aes(fill = Views, y = NMI.values, x = Simulated.Data)) +
+  geom_bar(aes(fill = Views), stat = "identity", position = "dodge")
+
+```
+
+
+```{r}
+#Run SNF pipeline on GBM data (also with breast, kidney, liver...) from paper
+
 ```
