--- a/makePlots/makePlots.Rmd
+++ b/makePlots/makePlots.Rmd
@@ -13,17 +13,17 @@ knitr::opts_chunk$set(echo = TRUE)
 #Making figures using simulated data
 #Make sure to have local version of SNFTool installed
 #Load utility functions
-util.fxns <- "~/Documents/uva/master/the/utils/simMVData.R" 
-#util.fxns <- "~/Documents/gitRepos/master/utils/simMVData.R"
+#util.fxns <- "~/Documents/uva/master/the/utils/simMVData.R" 
+util.fxns <- "~/Documents/gitRepos/master/utils/simMVData.R"
 source(util.fxns)
 
 
-snf.fxns <- "~/Documents/uva/master/the/utils/snf_fxns.R"
-#snf.fxns <- "~/Documents/gitRepos/master/utils/snf_fxns.R"
+#snf.fxns <- "~/Documents/uva/master/the/utils/snf_fxns.R"
+snf.fxns <- "~/Documents/gitRepos/master/utils/snf_fxns.R"
 source(snf.fxns)
 
-plotting.fxns <- "~/Documents/uva/master/the/utils/plotting_fxns.R"
-#plotting.fxns <- "~/Documents/gitRepos/master/utils/plotting_fxns.R"
+#plotting.fxns <- "~/Documents/uva/master/the/utils/plotting_fxns.R"
+plotting.fxns <- "~/Documents/gitRepos/master/utils/plotting_fxns.R"
 source(plotting.fxns)
 
 ###Clean up this particular set of functions, redundant
@@ -37,12 +37,12 @@ library(SNFtool)
 
 
 #Data and Labels for simulated scenario A -- from SNFtool pacakge
-data("Data1")#Loads Data1
-data("Data2")#Loads Data2
+#data("Data1")#Loads Data1
+#data("Data2")#Loads Data2
 
-labels <- c(matrix(1,100,1),matrix(2,100,1))
+#labels <- c(matrix(1,100,1),matrix(2,100,1))
 
-inverted.sim <- processSNFData(Data1, Data2, labels)
+#inverted.sim <- processSNFData(Data1, Data2, labels)
 
 
 #Data and Labels for simulated scenario B
@@ -192,5 +192,35 @@ ggplot(nmi.data, aes(fill = Views, y = NMI.values, x = Simulated.Data)) +
 
 ```{r}
 #Run SNF pipeline on GBM data (also with breast, kidney, liver...) from paper
+#Wrap up supressWarnings function later
+#snf.gbm <- suppressWarnings(expr = runSNFPipeline2(disease = "GBM", K = 4, down.pct = 0.5))
+
+
+snf.gbm <- runSNFPipeline2(disease = "GBM")
+
+#Make some silhouette plots
+plot(snf.gbm$silhouette.values$single.view$ge,
+     col = rainbow(3, s = 0.8), cex = 0.8,
+     main = "Silhouette plot of Data View",
+     nmax.lab = 60, max.strlen = 5,
+     do.n.k = FALSE, do.clus.stat = TRUE)
+
+
+
+## S3 method for class 'silhouette'
+#plot(x, nmax.lab = 40, max.strlen = 5,
+#     main = NULL, sub = NULL, xlab = expression("Silhouette width "* s[i]),
+#     col = "gray",  do.col.sort = length(col) > 1, border = 0,
+#     cex.names = par("cex.axis"), do.n.k = TRUE, do.clus.stat = TRUE, ...)
+
+
+
+#Plot affinity matrices 
+
+
+plotSNFHeatComparison2(all.data = snf.gbm$affinity.matrices,
+                      true.labels = snf.gbm$identity,
+                      down.pct = 1)
+
 
 ```
